changes on artists

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -569,7 +569,7 @@
         <div class="container text-center">
             <h1 class="hero-title">Discover Kenyan Music</h1>
             <p class="hero-subtitle">Explore the best music from talented Kenyan artists. Stream, share, and enjoy!</p>
-            <a href="{{url_for('main.index') }}"
+            <a href="{{url_for('main.latest_songs') }}"
             <button class="btn btn-light btn-lg">
                 <i class="fas fa-play-circle me-2"></i> Explore Now
             </button> </a>
